# pmi

./: CHANGES.txt  MANIFEST.in  Makefile.am  README.txt  autogen.sh  configure.ac  pmi.py  setup.py
build-aux/macros/: axes_log4espp.m4
c++/examples/: Makefile.am  inheritance.cpp  pass_obj.cpp
c++/logging/: Makefile.am
doc/: conf.py  index.rst  pmi.rst
examples/: Makefile.am  basic.cpp  derived.cpp  hello.cpp  inheritance.cpp  log.conf  pass_obj.cpp
examples/0_basic/: Makefile.in  hello.cpp
examples/basic/: hello.cpp
examples/hello/: hello_basic1.py  hello_basic2.py  hello_class.py  hello_module.py  hello_proxy.py  hellomod.py
examples/mandelbrot/: mandelbrot.py  mandelbrot_pmi.py  mandelbrot_serial.py
examples/proxy/: hello.cpp
examples/two_methods/: hello.cpp
logging/: log4espp.hpp
pmi/: Makefile.am  ParallelClass.cpp  ParallelClass.hpp  ParallelMethod.cpp  ParallelMethod.hpp  ParallelObject.cpp  ParallelObject.hpp  basic_func.cpp  basic_func.hpp  common.hpp  common_decl.hpp  controller.cpp  controller.hpp  controller_func.cpp  controller_func.hpp  exceptions.cpp  exceptions.hpp  log4espp.hpp  pmi.hpp  transmit.hpp  types.cpp  types.hpp  worker.cpp  worker.hpp  workerMaps.cpp  workerMaps.hpp  worker_internal.cpp  workersActive.cpp  workersActive.hpp
pmi/mpitransmit/: Makefile.in  transmit.cpp
test/: test_pmi.py  test_spawn.py  test_spawn_child.py
